--- a/Information_Retrieval/IR_Lab_eval_prac.ipynb
+++ b/Information_Retrieval/IR_Lab_eval_prac.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-16T16:46:53.086707Z",
-     "start_time": "2024-09-16T16:46:53.083299Z"
+     "end_time": "2024-09-17T01:53:46.504810Z",
+     "start_time": "2024-09-17T01:53:45.047604Z"
     }
    },
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "statement = \"Hello my name is tiger!\""
@@ -28,21 +28,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-16T09:17:36.188916Z",
-     "start_time": "2024-09-16T09:17:36.184991Z"
+     "end_time": "2024-09-17T01:53:48.423748Z",
+     "start_time": "2024-09-17T01:53:48.409820Z"
     }
    },
    "id": "bc45168ca4b03239"
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "['Hello', 'my', 'name', 'is', 'tiger', '!']"
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,15 +54,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-16T09:17:45.855832Z",
-     "start_time": "2024-09-16T09:17:45.839324Z"
+     "end_time": "2024-09-17T01:53:48.915050Z",
+     "start_time": "2024-09-17T01:53:48.905142Z"
     }
    },
    "id": "652576f6913e7905"
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "documents = [\n",
@@ -74,15 +74,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-16T09:24:47.335358Z",
-     "start_time": "2024-09-16T09:24:47.330256Z"
+     "end_time": "2024-09-17T01:53:49.499744Z",
+     "start_time": "2024-09-17T01:53:49.452160Z"
     }
    },
    "id": "883d3c8015600370"
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -110,15 +110,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-16T09:24:47.785295Z",
-     "start_time": "2024-09-16T09:24:47.780887Z"
+     "end_time": "2024-09-17T01:53:49.939134Z",
+     "start_time": "2024-09-17T01:53:49.936047Z"
     }
    },
    "id": "5ae419bf8adfeada"
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -153,15 +153,74 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-16T09:25:56.770635Z",
-     "start_time": "2024-09-16T09:25:56.764512Z"
+     "end_time": "2024-09-17T01:53:51.499087Z",
+     "start_time": "2024-09-17T01:53:51.478075Z"
     }
    },
    "id": "3a66555e95ab71b5"
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             0  1  2\n",
+      "algorithm    0  0  1\n",
+      "correction   0  1  0\n",
+      "for          0  0  1\n",
+      "in           1  0  0\n",
+      "interesting  0  1  0\n",
+      "is           0  1  1\n",
+      "love         1  0  0\n",
+      "phonetic     0  1  0\n",
+      "programming  1  0  0\n",
+      "python       1  0  0\n",
+      "soundex      0  0  1\n",
+      "spell        0  1  0\n",
+      "spelling     0  0  1\n",
+      "useful       0  0  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Example corpus (documents)\n",
+    "documents = [\n",
+    "    \"I love programming in Python\",\n",
+    "    \"Phonetic spell correction is interesting\",\n",
+    "    \"Soundex is a useful algorithm for spelling\"\n",
+    "]\n",
+    "\n",
+    "# Initialize the CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "\n",
+    "# Fit the vectorizer to the documents and transform them into a term-frequency matrix\n",
+    "X = vectorizer.fit_transform(documents)\n",
+    "\n",
+    "# Convert the term-frequency matrix into a pandas DataFrame for better readability\n",
+    "tf_matrix = pd.DataFrame(X.toarray(), columns=vectorizer.get_feature_names_out())\n",
+    "\n",
+    "tf_matrix = tf_matrix.T\n",
+    "# Output the term-frequency matrix\n",
+    "print(tf_matrix)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-17T01:56:50.482548Z",
+     "start_time": "2024-09-17T01:56:49.789396Z"
+    }
+   },
+   "id": "619070bbd599d10"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "import nltk\n",
@@ -171,15 +230,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-16T17:05:54.787193Z",
-     "start_time": "2024-09-16T17:05:54.779022Z"
+     "end_time": "2024-09-17T01:53:54.051198Z",
+     "start_time": "2024-09-17T01:53:54.039154Z"
     }
    },
    "id": "5098069a855c1a9f"
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Tokenization\n",
@@ -205,15 +264,62 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-16T17:00:16.670754Z",
-     "start_time": "2024-09-16T17:00:16.662546Z"
+     "end_time": "2024-09-17T01:53:59.150729Z",
+     "start_time": "2024-09-17T01:53:59.147101Z"
     }
    },
    "id": "74f09058ff4c1e97"
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(' ', 'H', 'e')   <class 'tuple'>\n",
+      " He\n",
+      "('H', 'e', 'l')   <class 'tuple'>\n",
+      "Hel\n",
+      "('e', 'l', 'l')   <class 'tuple'>\n",
+      "ell\n",
+      "('l', 'l', 'o')   <class 'tuple'>\n",
+      "llo\n",
+      "('l', 'o', ' ')   <class 'tuple'>\n",
+      "lo \n",
+      "('o', ' ', 'W')   <class 'tuple'>\n",
+      "o W\n",
+      "(' ', 'W', 'o')   <class 'tuple'>\n",
+      " Wo\n",
+      "('W', 'o', 'r')   <class 'tuple'>\n",
+      "Wor\n",
+      "('o', 'r', 'l')   <class 'tuple'>\n",
+      "orl\n",
+      "('r', 'l', 'd')   <class 'tuple'>\n",
+      "rld\n",
+      "('l', 'd', ' ')   <class 'tuple'>\n",
+      "ld \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in ngrams(\" Hello World \",3):\n",
+    "    print(i,\" \",type(i))\n",
+    "    print(''.join(i))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-17T01:57:44.926458Z",
+     "start_time": "2024-09-17T01:57:44.924692Z"
+    }
+   },
+   "id": "621b90418e581c2e"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "# Generate n-grams (n-character n-grams, default is 3)\n",
@@ -223,12 +329,15 @@
     "# N-Gram Based Spell Correction\n",
     "def spell_correction_ngram(word, vocabulary, n=3):\n",
     "    word_ngrams = set(generate_ngrams(word, n))  # Generate n-grams for the misspelled word\n",
+    "    print(word_ngrams)\n",
     "    best_match = None\n",
     "    max_overlap = 0\n",
     "\n",
     "    for vocab_word in vocabulary:\n",
     "        vocab_ngrams = set(generate_ngrams(vocab_word, n))  # Generate n-grams for the vocabulary word\n",
+    "        print(\"Vocab : \",vocab_ngrams)\n",
     "        overlap = len(word_ngrams & vocab_ngrams)  # Calculate the overlap between the n-grams\n",
+    "        print(overlap)\n",
     "        total_ngrams = len(word_ngrams | vocab_ngrams)  # Total n-grams (union)\n",
     "        \n",
     "        # Calculate Jaccard similarity\n",
@@ -278,21 +387,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-16T17:05:20.215128Z",
-     "start_time": "2024-09-16T17:05:20.211704Z"
+     "end_time": "2024-09-17T02:05:41.397835Z",
+     "start_time": "2024-09-17T02:05:41.397470Z"
     }
    },
    "id": "c393178a34960d69"
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "outputs": [
     {
      "data": {
       "text/plain": "['I', 'love', 'programming', 'in', 'Python']"
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,21 +414,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-16T17:00:29.902772Z",
-     "start_time": "2024-09-16T17:00:29.899135Z"
+     "end_time": "2024-09-17T02:05:42.629045Z",
+     "start_time": "2024-09-17T02:05:42.626381Z"
     }
    },
    "id": "8f924222988e8ed2"
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "outputs": [
     {
      "data": {
       "text/plain": "defaultdict(list,\n            {'I': [0],\n             'love': [0],\n             'programming': [0],\n             'in': [0],\n             'Python': [0],\n             'Phonetic': [1],\n             'spell': [1],\n             'correction': [1],\n             'is': [1, 2],\n             'interesting': [1],\n             'Soundex': [2],\n             'a': [2],\n             'useful': [2],\n             'algorithm': [2],\n             'for': [2],\n             'spelling': [2]})"
      },
-     "execution_count": 39,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,21 +440,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-16T17:01:28.007153Z",
-     "start_time": "2024-09-16T17:01:28.001411Z"
+     "end_time": "2024-09-17T02:05:43.310871Z",
+     "start_time": "2024-09-17T02:05:43.305836Z"
     }
    },
    "id": "6b7f2959d1ef109"
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "outputs": [
     {
      "data": {
       "text/plain": "['I',\n 'love',\n 'programming',\n 'in',\n 'Python',\n 'Phonetic',\n 'spell',\n 'correction',\n 'is',\n 'interesting',\n 'Soundex',\n 'a',\n 'useful',\n 'algorithm',\n 'for',\n 'spelling']"
      },
-     "execution_count": 40,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,20 +467,53 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-16T17:04:12.851235Z",
-     "start_time": "2024-09-16T17:04:12.845229Z"
+     "end_time": "2024-09-17T02:05:45.873526Z",
+     "start_time": "2024-09-17T02:05:45.868055Z"
     }
    },
    "id": "a0101498462937c"
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'one', 'eti', 'hon', 'pho', 'net', 'ick', 'tic'}\n",
+      "Vocab :  set()\n",
+      "0\n",
+      "Vocab :  {'ove', 'lov'}\n",
+      "0\n",
+      "Vocab :  {'ram', 'ing', 'gra', 'pro', 'ogr', 'rog', 'amm', 'mmi', 'min'}\n",
+      "0\n",
+      "Vocab :  set()\n",
+      "0\n",
+      "Vocab :  {'Pyt', 'tho', 'hon', 'yth'}\n",
+      "1\n",
+      "Vocab :  {'Pho', 'one', 'eti', 'hon', 'net', 'tic'}\n",
+      "5\n",
+      "Vocab :  {'ell', 'pel', 'spe'}\n",
+      "0\n",
+      "Vocab :  {'rec', 'ion', 'tio', 'ect', 'rre', 'orr', 'cor', 'cti'}\n",
+      "0\n",
+      "Vocab :  set()\n",
+      "0\n",
+      "Vocab :  {'ing', 'ter', 'res', 'tin', 'int', 'ere', 'est', 'nte', 'sti'}\n",
+      "0\n",
+      "Vocab :  {'und', 'Sou', 'dex', 'nde', 'oun'}\n",
+      "0\n",
+      "Vocab :  set()\n",
+      "0\n",
+      "Vocab :  {'sef', 'efu', 'use', 'ful'}\n",
+      "0\n",
+      "Vocab :  {'rit', 'thm', 'ith', 'lgo', 'ori', 'gor', 'alg'}\n",
+      "0\n",
+      "Vocab :  {'for'}\n",
+      "0\n",
+      "Vocab :  {'ing', 'lli', 'pel', 'lin', 'ell', 'spe'}\n",
+      "0\n",
       "N-Gram Corrected Word: Phonetic\n"
      ]
     }
@@ -386,15 +528,41 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-16T17:04:55.856637Z",
-     "start_time": "2024-09-16T17:04:55.848349Z"
+     "end_time": "2024-09-17T02:05:47.086344Z",
+     "start_time": "2024-09-17T02:05:47.081603Z"
     }
    },
    "id": "aabf5d61c4fca4d"
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {'abc','def','ghi','jkl'}\n",
+    "b = {'abc','def','xyz','uvw'}\n",
+    "print(len(a & b))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-17T02:06:36.915176Z",
+     "start_time": "2024-09-17T02:06:36.911169Z"
+    }
+   },
+   "id": "d8389bd294b07b1d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -413,21 +581,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-16T17:05:24.694806Z",
-     "start_time": "2024-09-16T17:05:24.671490Z"
+     "end_time": "2024-09-17T01:57:07.165803Z",
+     "start_time": "2024-09-17T01:57:07.160012Z"
     }
    },
    "id": "8241c4e8eea60758"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "d8d1f0274a54442d"
   }
  ],
  "metadata": {
