--- a/Information_Retrieval/IR_Lab_evaluation.ipynb
+++ b/Information_Retrieval/IR_Lab_evaluation.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "id": "38b19c72cafa80f3",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "## Set 2"
@@ -17,10 +14,7 @@
    "cell_type": "markdown",
    "id": "f7307ac6ef869466",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Importing the libraries"
@@ -51,10 +45,7 @@
    "cell_type": "markdown",
    "id": "f16ed4c0ddee6edc",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Documents to be used"
@@ -69,10 +60,7 @@
      "end_time": "2024-09-17T04:23:48.940033Z",
      "start_time": "2024-09-17T04:23:48.863191Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -88,10 +76,7 @@
      "end_time": "2024-09-17T04:23:48.978209Z",
      "start_time": "2024-09-17T04:23:48.869088Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -118,10 +103,7 @@
      "end_time": "2024-09-17T04:23:48.983252Z",
      "start_time": "2024-09-17T04:23:48.871239Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -137,10 +119,7 @@
      "end_time": "2024-09-17T04:23:48.983368Z",
      "start_time": "2024-09-17T04:23:48.872817Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -167,10 +146,7 @@
      "end_time": "2024-09-17T04:23:48.999830Z",
      "start_time": "2024-09-17T04:23:48.877087Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -186,10 +162,7 @@
      "end_time": "2024-09-17T04:23:48.999964Z",
      "start_time": "2024-09-17T04:23:48.879840Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -211,10 +184,7 @@
    "cell_type": "markdown",
    "id": "6eca9e2eec8f9111",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Tokenization"
@@ -224,10 +194,7 @@
    "cell_type": "markdown",
    "id": "b3a947984fecfad7",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "Steps : \n",
@@ -245,10 +212,7 @@
      "end_time": "2024-09-17T04:23:49.020141Z",
      "start_time": "2024-09-17T04:23:48.882574Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -308,10 +272,7 @@
      "end_time": "2024-09-17T04:23:49.021756Z",
      "start_time": "2024-09-17T04:23:48.888745Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -517,10 +478,7 @@
      "end_time": "2024-09-17T04:23:49.022594Z",
      "start_time": "2024-09-17T04:23:48.895003Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -536,10 +494,7 @@
      "end_time": "2024-09-17T04:23:49.022711Z",
      "start_time": "2024-09-17T04:23:48.897823Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -684,10 +639,7 @@
      "end_time": "2024-09-17T04:23:49.023039Z",
      "start_time": "2024-09-17T04:23:48.900428Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -703,10 +655,7 @@
      "end_time": "2024-09-17T04:23:49.023149Z",
      "start_time": "2024-09-17T04:23:48.902896Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -848,10 +797,7 @@
      "end_time": "2024-09-17T04:23:49.023179Z",
      "start_time": "2024-09-17T04:23:48.907636Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -867,10 +813,7 @@
      "end_time": "2024-09-17T04:23:49.023274Z",
      "start_time": "2024-09-17T04:23:48.910001Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1025,10 +968,7 @@
      "end_time": "2024-09-17T04:23:49.023302Z",
      "start_time": "2024-09-17T04:23:48.912515Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1049,10 +989,7 @@
      "end_time": "2024-09-17T04:23:49.023330Z",
      "start_time": "2024-09-17T04:23:48.915073Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1070,10 +1007,7 @@
      "end_time": "2024-09-17T04:23:49.023409Z",
      "start_time": "2024-09-17T04:23:48.916701Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1097,10 +1031,7 @@
      "end_time": "2024-09-17T04:23:49.023462Z",
      "start_time": "2024-09-17T04:23:48.918779Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1124,10 +1055,7 @@
      "end_time": "2024-09-17T04:23:49.023512Z",
      "start_time": "2024-09-17T04:23:48.920618Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1146,10 +1074,7 @@
    "cell_type": "markdown",
    "id": "9c0d4fd0ea009974",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Inverted Index construction"
@@ -1159,10 +1084,7 @@
    "cell_type": "markdown",
    "id": "cff0bfa5fc8da5d4",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "Steps : \n",
@@ -1179,10 +1101,7 @@
      "end_time": "2024-09-17T04:23:49.023538Z",
      "start_time": "2024-09-17T04:23:48.922606Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1202,10 +1121,7 @@
      "end_time": "2024-09-17T04:23:49.023562Z",
      "start_time": "2024-09-17T04:23:48.924327Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1223,10 +1139,7 @@
      "end_time": "2024-09-17T04:23:49.023690Z",
      "start_time": "2024-09-17T04:23:48.928430Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1387,10 +1300,7 @@
    "cell_type": "markdown",
    "id": "d9e5637c313a284c",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Result for query thee AND self"
@@ -1400,10 +1310,7 @@
    "cell_type": "markdown",
    "id": "3b372f8abdb1ca78",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "Steps : \n",
@@ -1421,10 +1328,7 @@
      "end_time": "2024-09-17T04:23:49.023742Z",
      "start_time": "2024-09-17T04:23:48.930707Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1452,10 +1356,7 @@
      "end_time": "2024-09-17T04:23:49.023791Z",
      "start_time": "2024-09-17T04:23:48.933237Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1483,10 +1384,7 @@
      "end_time": "2024-09-17T04:23:49.023846Z",
      "start_time": "2024-09-17T04:23:48.935599Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1514,10 +1412,7 @@
      "end_time": "2024-09-17T04:23:49.023896Z",
      "start_time": "2024-09-17T04:23:48.937571Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1539,10 +1434,7 @@
    "cell_type": "markdown",
    "id": "e8ae32de9bfe2245",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### Spell correction using Levenshtein distance with dynamic programming"
@@ -1552,10 +1444,7 @@
    "cell_type": "markdown",
    "id": "5814db94a75ec8a6",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "Steps :\n",
@@ -1574,10 +1463,7 @@
      "end_time": "2024-09-17T04:23:49.024375Z",
      "start_time": "2024-09-17T04:23:48.941232Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1611,10 +1497,7 @@
      "end_time": "2024-09-17T04:23:49.024406Z",
      "start_time": "2024-09-17T04:23:48.943023Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1630,10 +1513,7 @@
      "end_time": "2024-09-17T04:23:49.024467Z",
      "start_time": "2024-09-17T04:23:48.944653Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1649,10 +1529,7 @@
      "end_time": "2024-09-17T04:23:49.024530Z",
      "start_time": "2024-09-17T04:23:48.946611Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1676,10 +1553,7 @@
      "end_time": "2024-09-17T04:23:49.024804Z",
      "start_time": "2024-09-17T04:23:48.948715Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1703,10 +1577,7 @@
      "end_time": "2024-09-17T04:23:49.024866Z",
      "start_time": "2024-09-17T04:23:48.952023Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1738,10 +1609,7 @@
      "end_time": "2024-09-17T04:23:49.024899Z",
      "start_time": "2024-09-17T04:23:48.953525Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
